minor changes admin control SOS fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,46 @@
-# Logs
-logs
-*.log
+# =========================
+# Node.js
+# =========================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# =========================
+# Environment files
+# =========================
+# Backend env
+server/.env
+# Frontend env
+src/.env
+/node_modules
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# =========================
+# Logs
+# =========================
+logs
+*.log
+*.log.*
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# =========================
+# OS generated files
+# =========================
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# =========================
+# Build / dist folders
+# =========================
+frontend/dist/
+backend/dist/
+frontend/build/
+
+# =========================
+# VS Code settings
+# =========================
+.vscode/
+.history/
