--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "nodemon": "^3.1.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "tailwindcss": "^3.4.13",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "proxy": "http://localhost:5173"
   }
 }
